--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+altgraph==0.17.4
+appdirs==1.4.4
 asttokens==2.4.1
 attrs==23.2.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
 blackboxprotobuf==1.0.1
 blinker==1.7.0
+bsdiff4==1.2.4
 certifi==2023.11.17
 cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -13,6 +17,8 @@ comm==0.2.1
 cryptography==42.0.3
 debugpy==1.8.0
 decorator==5.1.1
+Deprecated==1.2.14
+dsdev-utils==1.3.0
 executing==2.0.1
 Flask==3.0.1
 Flask-Cors==4.0.0
@@ -37,6 +43,8 @@ numpy==1.24.4
 packaging==23.2
 pandas==2.0.3
 parso==0.8.3
+pbr==6.0.0
+pefile==2023.2.7
 pendulum==3.0.0
 pickleshare==0.7.5
 pillow==10.2.0
@@ -50,12 +58,16 @@ PyAudio==0.2.14
 pycparser==2.21
 pycryptodomex==3.20.0
 Pygments==2.17.2
+pyinstaller==6.5.0
+pyinstaller-hooks-contrib==2024.3
 PyJWT==2.8.0
 Pymem==1.13.1
+PyNaCl==1.5.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 pywin32==306
-pywxdump==2.4.60
+pywin32-ctypes==0.2.2
+pywxdump==2.4.70
 pyzmq==25.1.2
 requests==2.31.0
 requests-file==2.0.0
@@ -64,6 +76,7 @@ silk-python==0.2.4
 simple-salesforce==1.12.5
 six==1.16.0
 stack-data==0.6.3
+stevedore==3.5.2
 time-machine==2.13.0
 tornado==6.4
 traitlets==5.14.1
@@ -72,5 +85,6 @@ tzdata==2023.4
 urllib3==2.1.0
 wcwidth==0.2.13
 Werkzeug==3.0.1
+wrapt==1.16.0
 zeep==4.2.1
 zipp==3.17.0
