--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ click==8.1.7
 colorama==0.4.6
 comm==0.2.1
 cryptography==42.0.3
+DBUtils==3.1.0
 debugpy==1.8.0
 decorator==5.1.1
 Deprecated==1.2.14
@@ -67,7 +68,7 @@ python-dateutil==2.8.2
 pytz==2023.3.post1
 pywin32==306
 pywin32-ctypes==0.2.2
-pywxdump==3.0.29
+pywxdump==3.1.6
 pyzmq==25.1.2
 requests==2.31.0
 requests-file==2.0.0
