--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 altgraph==0.17.4
+annotated-types==0.7.0
+anyio==4.4.0
 appdirs==1.4.4
 asttokens==2.4.1
 attrs==23.2.0
@@ -20,9 +22,12 @@ debugpy==1.8.0
 decorator==5.1.1
 Deprecated==1.2.14
 dsdev-utils==1.3.0
+exceptiongroup==1.2.2
 executing==2.0.1
+fastapi==0.114.1
 Flask==3.0.1
 Flask-Cors==4.0.0
+h11==0.14.0
 idna==3.6
 importlib-metadata==7.0.1
 importlib-resources==6.1.1
@@ -58,6 +63,8 @@ pyahocorasick==2.0.0
 PyAudio==0.2.14
 pycparser==2.21
 pycryptodomex==3.20.0
+pydantic==2.9.1
+pydantic_core==2.23.3
 Pygments==2.17.2
 pyinstaller==6.5.0
 pyinstaller-hooks-contrib==2024.3
@@ -65,10 +72,11 @@ PyJWT==2.8.0
 Pymem==1.13.1
 PyNaCl==1.5.0
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 pytz==2023.3.post1
 pywin32==306
 pywin32-ctypes==0.2.2
-pywxdump==3.1.18
+pywxdump==3.1.33
 pyzmq==25.1.2
 requests==2.31.0
 requests-file==2.0.0
@@ -76,7 +84,9 @@ requests-toolbelt==1.0.0
 silk-python==0.2.4
 simple-salesforce==1.12.5
 six==1.16.0
+sniffio==1.3.1
 stack-data==0.6.3
+starlette==0.38.5
 stevedore==3.5.2
 time-machine==2.13.0
 tornado==6.4
@@ -84,6 +94,7 @@ traitlets==5.14.1
 typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
+uvicorn==0.30.6
 wcwidth==0.2.13
 Werkzeug==3.0.1
 wrapt==1.16.0
